# Arthur

./: .gitignore  README.md  build.sh  entrypoint.sh  first_map_auto.pgm  first_map_auto.yaml  fourth_map.pgm  fourth_map.yaml  june4_map.pgm  real_base_ip_details  run-image.sh  run.sh  second_map_auto.pgm  second_map_auto.yaml  showroom_map.pgm  third_map_auto.pgm  third_map_auto.yaml
create3-humble/: .~lock.test_obs.docx#  Dockerfile  en_exploration_screen.odt  entrypoint.sh  shell_setup.sh
create3-humble/composite_message_generator/: package.xml  setup.cfg  setup.py
create3-humble/composite_message_generator/composite_message_generator/: composite_message_generator.py
create3-humble/composite_message_generator/launch/: lfd_model_input.launch.py
create3-humble/create3_real/create3_launch_real/: CMakeLists.txt  package.xml
create3-humble/create3_sim_bckp/..git/: config  index  packed-refs
create3-humble/lfd_interfaces/: CMakeLists.txt  package.xml
create3-humble/lfd_interfaces/action/: CommandManager.action  Location.action  MapDrawer.action  Navigate.action  RFIDController.action  WaypointSaver.action
create3-humble/lfd_interfaces/msg/: LfdComp.msg
create3-humble/lfd_interfaces/srv/: CalcCmdVel.srv  LfdRes.srv  SMCRes.srv
create3-humble/lfd_pose_generator/: package.xml  setup.cfg  setup.py
create3-humble/lfd_pose_generator/launch/: lfd_pose.launch.py
create3-humble/lfd_pose_package/: package.xml  setup.cfg  setup.py
create3-humble/lfd_services/: package.xml  setup.cfg  setup.py
create3-humble/nav2_rl_api/: package.xml  setup.cfg  setup.py
create3-humble/nav2_simple_commander/: setup.py
create3-humble/start_create3/: package.xml  setup.py
create3-humble/start_create3_v0/: setup.cfg  setup.py
create3-humble/tf2_lookup_package/: package.xml  setup.cfg  setup.py
(+79 files in other folders)
